adapt report and add image descriptions

--- a/report.ipynb
+++ b/report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Group 3 Mobile Robotics Report\n",
     "\n",
-    "**students**: Marc Nassif,  Luca Simon Engel,  Giuseppe De Carlo,  Giada Ehrlich\n",
+    "**Group Members**: Luca Engel, Marc Nassif,  Giuseppe De Carlo,  Giada Ehrlich\n",
     "\n"
    ]
   },
@@ -65,19 +65,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In mobile robotics, fusing computer vision and sensor-based feedback is essential to establish reliable global navigation algorithms, motion control strategies, and sensor-based local obstacle avoidance to enable robots to intelligently and reliably navigate through dynamic environments. This report describes our effort to develop a solution that enables the Thymio robot to traverse a terrain containing obstacles and reach a goal.\n",
+    "In mobile robotics, fusing computer vision and sensor-based feedback is essential to establish reliable global navigation algorithms, motion control strategies, and sensor-based local obstacle avoidance to enable robots to intelligently and reliably navigate through dynamic environments. This report describes our effort to develop a solution that enables the Thymio robot to traverse a terrain containing obstacles and to reach a goal.\n",
     "\n",
-    "Our project integrates multiple technologies to improve the navigation precision. With the help of a video feed provided by a camera, computer vision is used to detect the map, the obstacles in the map, the Thymio robot, and the goal. Based on this information, a 2d grid of cells is constructed.\n",
+    "Our project integrates multiple technologies to improve the navigation precision. With the help of a video feed provided by a camera, computer vision is used to detect the map, the obstacles in the map, the Thymio robot, and the goal. Based on this information, a 2d grid of cells is constructed. The global navigation aspect employs the Dijkstra algorithm to calculate the shortest path from the Thymio to the goal, accounting for dynamically changing events, such as kidnapping where the Thymio or the goal are displaced. The motion control mechanism guided the Thymio along the calculated path which is discretized into intermediate points, facilitating a smooth and precise traversal. For local obstacle avoidance, the Thymio relies on its proximity sensors, allowing it to detect and navigate around obstacles not identified by the computer vision part. This ensures robust navigation, even when visual data is limited. The implementation of the Kalman filter for position and orientation estimation plays a pivotal role in this project. The filter combines information from the computer vision part and the wheel speeds of the Thymio to improve robustness of the navigation. The filter is even capable of functioning when the camera feed is obscured for a while, showing the robustness of our system.\n",
     "\n",
-    "The global navigation aspect employs the Dijkstra algorithm to calculate the shortest path from the Thymio to the goal, accounting for dynamically changing events, such as kidnapping where the Thymio or the goal are displaced.\n",
-    "\n",
-    "The motion control mechanism guided the Thymio along the calculated path which is discretized into intermediate points, facilitating a smooth and precise traversal.\n",
-    "\n",
-    "For local obstacle avoidance, the Thymio relies on its proximity sensors, allowing it to detect and navigate around obstacles not identified by the computer vision part. This ensures robust navigation, even when visual data is limited.\n",
-    "\n",
-    "The implementation of the Kalman filter for position and orientation estimation plays a pivotal role in this project. The filter combines information from the computer vision part and the wheel speeds of the Thymio to improve robustness of the navigation. The filter is even capable of functioning when the camera feed is obscured for a while, showing the robustness of our system.\n",
-    "\n",
-    "This report details the design, implementation, and performance of our solution and shows how the combination of sensors and data can drastically improve the capabilities and precision in robotic navigation."
+    "This report details the design, implementation, and performance of our solution and shows how the combination of sensor data can drastically improve the capabilities and precision in robotic navigation."
    ]
   },
   {
@@ -128,8 +120,8 @@
     "Map :\n",
     "- White background \n",
     "- Global obstacles: black \n",
-    "- Local obstacles: small objects\n",
-    "- Markers: Aruco Markers\n"
+    "- Local obstacles: small 3-dimensional objects\n",
+    "- Markers: ArUco Markers\n"
    ]
   },
   {
@@ -137,8 +129,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\">\n",
-    "\n"
+    "<img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\"/>\n",
+    "\n",
+    "*Set Up*"
    ]
   },
   {
@@ -159,43 +152,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our vision system forms the baseline of the Thymio's understanding of the environment. Using the OpenCV library, the map is created in multiple steps, each of which extracting information from the camera feed, allowing the robot to identify markers, determining their orientation, and recognizing obstacles. In the following, our procedure will be shown with the example of the following image feed:\n",
+    "Our vision system forms the baseline of the Thymio's understanding of the environment. Using the OpenCV library, the map is created in multiple steps, each of which extracting information from the camera feed, allowing our program to identify markers, determine their orientation, and recognize obstacles. In the following, our procedure will be shown with the example of the following image feed:\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/simple_camera_feed.png)\n",
+    "![Simple Camera Feed](./report_images/image_processing_images/simple_camera_feed.png)\n",
+    "*Unprocessed Camera Feed*\n",
     "\n",
     "\n",
     "##### Marker Detection\n",
-    "We used OpenCV's arUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed.\n",
+    "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed.\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/processed_base_frame.png)\n",
+    "![Processed Image with Map Filling the Entire Screen](./report_images/image_processing_images/normal_feed_img.png)\n",
+    "*Processed Feed with Map Filling the Screen*\n",
     "\n",
     "##### Grayscale Conversion and Thresholding\n",
     "To simplify the object detection, we converted the camera feed to grayscale. As the objects are represented as black shaped, applying thresholding to the image allowed for easy extraction of their location in the environment.\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/binary_img.png)\n",
+    "![Binary Image](./report_images/image_processing_images/binary_img.png)\n",
+    "*Binary Image*\n",
     "\n",
     "The resulting image still contains some noise due to the black thymio sensors being detected as obstacles. This is resolved in the next step. \n",
     "\n",
     "##### 2D Grid Representation\n",
-    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, occupied by the Thymio ( green), the goal ( blue), or an obstacle. \n",
+    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, occupied by the Thymio (green), the goal (blue), or an obstacle. \n",
     "\n",
     "After conversion, the 2D grid looks as follows:\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/grid_map_with_islands_not_increased_object_size.png)\n",
+    "![Grid Map with obstacles](./report_images/image_processing_images/grid_map_with_islands_not_increased_object_size.png)\n",
+    "*Grid Map with Obstacles*\n",
     "\n",
-    "Here, still, the map contains the noise from the black sensors of the Thymio. This is solved by removing all obstacles that are detected to be small islands which results in the following:\n",
-    "![Image Alt Text](./report_images/image_processing_images/grid_map_islands_removed_not_increased.png)\n",
+    "Here, still, the map contains the noise from the black sensors of the Thymio and the ArUco markers of which some are not entirely erased from the map. This is solved by removing all obstacles that are detected to be small islands which results in the following:\n",
+    "![Grid Map with Islands Removed](./report_images/image_processing_images/grid_map_islands_removed_not_increased.png)\n",
+    "*Grid Map with Islands Removed*\n",
     "\n",
     "\n",
+    "Lastly, to account for the width of the Thymio, obstacles are artificially enlarged to ensure that the Thymio cannot drive too close to the obstacles. The resulting map looks as follows:\n",
     "\n",
-    "Lastly, to account for the width of the Thymio, obstacles are enlarged to ensure that the Thymio cannot drive too close to the obstacles. The resulting map looks as follows:\n",
-    "\n",
-    "![Image Alt Text](./report_images/image_processing_images/grid_map_islands_removed_objects_increased.png)\n",
+    "![Grid Map with Object Size Increased](./report_images/image_processing_images/grid_map_islands_removed_objects_increased.png)\n",
+    "*Grid Map with Object Size Increased*\n",
     "\n",
     "\n",
     "\n",
     "##### Dynamic Updates\n",
-    "The grid is continuously updated with the positions of the Thymio and the goal within the map. These updates ensure that the Thymio can make informed decisions, such as path recomputation after kidnapping events or motion control adjustments.\n",
+    "The grid is continuously updated with the positions of the Thymio and the goal within the map. These updates ensure that the Thymio can make informed decisions and enable recomputing the path after kidnapping events or motion control adjustments.\n",
     "\n",
     "This part lays the groundwork for successful navigation of the Thymio robot in the terrain."
    ]
@@ -221,6 +219,7 @@
     "To have the Thymio drive more smoothly, the computed path is discretized into a series of fewer cells. Each cell represents a direction change in the path. The Thymio receives these cells as intermediate goals allowing a more natural movement along the path and decreasing the number of sudden direction changes. The resulting path is marked red in the map and the direction changes purple. With this addition, the grid image looks as follows:\n",
     "\n",
     "![Image Alt Text](./report_images/image_processing_images/grid_map_with_path.png)\n",
+    "*Grid Map Marked with Path and Direction Changes* \n",
     "\n",
     "##### Integration with Vision System\n",
     "Based on the information received from the vision system, the path is calculated and obstacles can be avoided. Additionally, kidnapping of the thymio and the goal can be handled. Whenever such a kidnapping occurs, the path is recomputed so that the goal can be reached.\n",
