--- a/report.ipynb
+++ b/report.ipynb
@@ -278,7 +278,9 @@
     "\n",
     "*Grid Map Marked with Local Avoidance Path*\n",
     "\n",
-    "Please note however that this image is never generated, as the camera and the computer are never aware of the local obstacle, this is only an illustration of a path possibly taken.\n"
+    "The Thymio detects the object (here in blue) and deviates from the Global Path (in red), choosing to go on the *outside* of the path's turn, thus drawing a circle, here in orange.\n",
+    "\n",
+    "Please note however that this image is never generated, as the camera and the computer are never aware of the local obstacle, this is only an illustration of a path possibly taken during local navigation.\n"
    ]
   },
   {
