--- a/report.ipynb
+++ b/report.ipynb
@@ -241,7 +241,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "....\n"
+     "The motion control is designed to control the speed and the direction of the Thymio. It was defined as a class and performs the basic movements of the robot. The class is used during the all process, except when the Thymio needs to avoid an obstacle and it's the local navigation that is active.\n",
+     "\n",
+     "The motion control handles 3 states of movement of the robot :\n",
+     "1. STOP: Stop the robot to move during the process or when it reached the goal.\n",
+     "2. ROTATE: Before moving to the next point, the Thymio will align is direction on it. When it's done the robot will pass in MOVE mode.\n",
+     "3. MOVE: When the Thymio has the confirmation that it's align, it will start to move to reach the next point. This process is controlled by a PI controller to adjust the trajectory of the Thymio.\n",
+     "\n",
+     "Now we will describe the main movement of our robot, the ROTATE and the MOVE and how tey work.\n",
+     "\n",
+     "#### ROTATE\n",
+     "![Image Alt Text](./report_images/BOMR_Rotation.png)\n",
+     "\n",
+     "*ROTATE mode illustration*\n",
+     "As we observe with the picture, the ROTATE mode will calculate the error between the desired angle and the Thymio angle. When it's done, the Thymio will find the sorthest path to use to be aligned with the desired angle and will rotate on itself to start the correction. When the Thymio has reached the correct angle, the camera will inform it and will send the command MOVE to start the movement to the next point.\n"
+     "![Image Alt Text](./report_images/BOMR_PI.png)\n",
+     "\n",
+     "*MOVE mode illustration*\n",
+     "After that the Thymio is aligned with the desired angle, the PI controller will handle the movement into the next point. During it, the regulation will work to keep the direction of the Thymio in the threshold angle. When the Thymio is in the threshold zone, *the green cone*, the same speed is implemented in both wheels. When the thymio is out of the cone, the PI controller will correct the direction by increasing the speed of one wheel and decreasing the speed of the other one. The regulation work until the error is inside treshold zone to avoid oscillation on the desired angle and constatly using the controller.\n",
+     "Like explained before, the PI controller is used during all the movement of the robot, except when it enters in obstacle avoidance who is handeld by the *Local Navigation*. The tuning of our regulator, *Kp* and *Ki*, has been done in experiment way. We observed how the robot was correcting its error with little gains and we increase our gains to have a smooth and dynmaic correction. We finally got good result with a *Kp = 3* and a *Ki = 0.2*.\n",
+     "We implemented a parameter *sum_error_max* to avoid drift of our wheeels during the movement. The max value was fined by an experiment way, like the regulator parameters.\n",
+     "#### Program of the movement\n",
+     " Finally, you can observe, with the next schematic, how the motion control of our Thymio is configure to succeed its mission.\n",
+     "![Image Alt Text](./report_images/BOMR_MotionStep.png)\n",
+     "\n",
+     "*Schematic of the movement*\n",
    ]
   },
   {
