--- a/report.ipynb
+++ b/report.ipynb
@@ -265,7 +265,7 @@
      " Finally, you can observe, with the next schematic, how the motion control of our Thymio is configure to succeed its mission.\n",
      "![Image Alt Text](./report_images/BOMR_MotionStep.png)\n",
      "\n",
-     "*Schematic of the movement*\n",
+     "*Schematic of the movement*\n"
    ]
   },
   {
