--- a/report.ipynb
+++ b/report.ipynb
@@ -251,11 +251,11 @@
      "Now we will describe the main movement of our robot, the ROTATE and the MOVE and how tey work.\n",
      "\n",
      "#### ROTATE\n",
-     "![Image Alt Text](./report_images/BOMR_Rotation.png)\n",
+     "![Image Alt Text](./report_images/BOMR_Rotation.PNG)\n",
      "\n",
      "*ROTATE mode illustration*\n",
      "As we observe with the picture, the ROTATE mode will calculate the error between the desired angle and the Thymio angle. When it's done, the Thymio will find the sorthest path to use to be aligned with the desired angle and will rotate on itself to start the correction. When the Thymio has reached the correct angle, the camera will inform it and will send the command MOVE to start the movement to the next point.\n"
-     "![Image Alt Text](./report_images/BOMR_PI.png)\n",
+     "![Image Alt Text](./report_images/BOMR_PI.PNG)\n",
      "\n",
      "*MOVE mode illustration*\n",
      "After that the Thymio is aligned with the desired angle, the PI controller will handle the movement into the next point. During it, the regulation will work to keep the direction of the Thymio in the threshold angle. When the Thymio is in the threshold zone, *the green cone*, the same speed is implemented in both wheels. When the thymio is out of the cone, the PI controller will correct the direction by increasing the speed of one wheel and decreasing the speed of the other one. The regulation work until the error is inside treshold zone to avoid oscillation on the desired angle and constatly using the controller.\n",
@@ -263,7 +263,7 @@
      "We implemented a parameter *sum_error_max* to avoid drift of our wheeels during the movement. The max value was fined by an experiment way, like the regulator parameters.\n",
      "#### Program of the movement\n",
      " Finally, you can observe, with the next schematic, how the motion control of our Thymio is configure to succeed its mission.\n",
-     "![Image Alt Text](./report_images/BOMR_MotionStep.png)\n",
+     "![Image Alt Text](./report_images/BOMR_MotionStep.PNG)\n",
      "\n",
      "*Schematic of the movement*\n"
    ]
