--- a/report.ipynb
+++ b/report.ipynb
@@ -240,38 +240,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The motion control is designed to manage the speed and the direction of the Thymio. It was defined as a class to perform the basic movements of the robot. The class is used during the entire process, except when the Thymio needs to avoid an obstacle, and in this case, the *Local Navigation* becomes active.\n",
+    "The motion control is designed to manage the speed and the direction of the Thymio. It was defined as a class to perform the basic movements of the robot. The class is used during the entire process, except when the Thymio needs to avoid an obstacle for local avoidance. In this case, *Local Navigation* becomes active.\n",
     " \n",
     "The motion control handles 3 states of the robot's movement:\n",
-    "* **STOP**: Halts the robot to move during the process or when it reaches the goal.\n",
-    "* **ROTATE**: Prior moving to the next point, the Thymio aligns is direction to face it. Once done, the robot transits in MOVE mode.\n",
-    "* **MOVE**: When the Thymio has the confirmation that it is aligned, it will begin moving towards the next point. This process is regulated by a PI controller to adjust the Thymio's trajectory.\n",
+    "* **STOP**: Halts the robot during the move process or when it reaches the goal.\n",
+    "* **ROTATE**: Prior to moving to the next point, the Thymio aligns its direction to face it. Once done, the robot transits in MOVE mode.\n",
+    "* **MOVE**: When the Thymio has the confirmation that it is aligned, it begins moving towards the next point. This process is regulated by a PI controller to adjust the Thymio's trajectory.\n",
     "     \n",
-    "Now we will describe the main movement of our robot, the ROTATE and the MOVE and describe how they operate.\n",
+    "In the following, the main movement of the robot, the ROTATE state and the MOVE state are explained.\n",
     "  \n",
     "   \n",
     "##### ROTATE\n",
     "\n",
     "![Image Alt Text](./report_images/BOMR_Rotation.PNG)\n",
-    "     *ROTATE mode illustration*\n",
+    "     *ROTATE Mode Illustration*\n",
     "\n",
-    "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. Once the calculation done, the Thymio receives the sorthest path to align itslef with the desired angle and will rotate on its axis to start the correction. When the Thymio has reached the correct angle, the camera signals it and the Thymio will execute the MOVE command towards the next point.\n",
+    "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. Once the calculation is done, the Thymio receives the shortest path to align itself with the desired angle and will rotate on its axis to start the correction. Once the Thymio has attained the correct angle, the Thymio will transition the MOVE state and drive towards the next point.\n",
     "\n",
     "##### MOVE\n",
     "![Image Alt Text](./report_images/BOMR_PI.PNG)\n",
-    "    *MOVE mode illustration*\n",
+    "    *MOVE Mode Illustration*\n",
     "\n",
-    "After aligning with the desired angle, the PI controller handles the movement towards the next point. During it, the regulation works to maintain the Thymio's direction in the threshold angle. When the Thymio is in the threshold zone, *the green cone*, both wheels rotate at the same velocity. When the Thymio is out of the cone, the PI controller corrects the direction by increasing the speed of one wheel and decreasing the speed of the other one. The regulation works until the error is inside the threshold zone, avoiding oscillation around the desired angle.\n",
+    "After aligning with the desired angle, the PI controller handles the movement towards the next point. During this movement, the regulation works to maintain the Thymio's direction within the threshold angle. When the Thymio is in the threshold zone, *the green cone*, both wheels rotate at the same velocity. When the Thymio is out of the cone, the PI controller corrects the direction by increasing the speed of one wheel and decreasing the speed of the other one. The regulation works until the error is inside the threshold zone, avoiding oscillation around the desired angle.\n",
     "     \n",
-    "Like explained before, the PI controller is performing during all the robot's movement, except when it enters in obstacle avoidance who is managed by the *Local Navigation*. The tuning of our regulator, *Kp* and *Ki*, was tuned in an experimental way. We observed how the robot was correcting its error, with small gains, and progressively increased the values of our gains to achieve a smooth and dynamic correction. Finally, we obtanied acceptable results with a *Kp = 3* and a *Ki = 0.2*.\n",
+    "The PI controller is active during all the robot's movement, except when it enters into obstacle avoidance which is managed by *Local Navigation*. The tuning of our regulator, *Kp* and *Ki*, was tuned in an experimental way. We observed how the robot corrected its error with small gains and progressively increased these values to achieve a smooth and dynamic correction. Finally, we obtained good results with *Kp = 3* and *Ki = 0.2*.\n",
     "\n",
-    "We implemented a parameter, called *sum_error_max* to avoid wheel drift during the movement. The maximum value was determined by an experimental way, similar to the regulator parameters.\n",
+    "We implemented a parameter called *sum_error_max* to avoid wheel drifting during the movement. The maximum value was determined in an experimental way, similar to the regulator parameters.\n",
     "\n",
     "\n",
     "##### Program of the movement\n",
-    "Finally, you can observe, with the next schematic, how our Thymio's motion control is configure to perform its mission.\n",
+    "Below is a schematic illustrating the configured motion control of Thymio, showcasing how it is orchestrated to accomplish its mission\n",
     "![Image Alt Text](./report_images/BOMR_MotionStep.PNG)\n",
-    "     *Schematic of the movement*\n"
+    "     *Schematic of the Movement*\n"
    ]
   },
   {
